# RayTracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  CheckersPattern.cpp  CheckersPattern.h  Color.cpp  Color.h  FMath.cpp  FMath.h  GradientPattern.cpp  GradientPattern.h  Intersection.cpp  Intersection.h  IntersectionComputations.cpp  IntersectionComputations.h  IntersectionResult.cpp  IntersectionResult.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  Pattern.cpp  Pattern.h  Plane.cpp  Plane.h  PointLight.cpp  PointLight.h  Ray.cpp  Ray.h  RingPattern.cpp  RingPattern.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  StripePattern.cpp  StripePattern.h  Tuple.cpp  (+3 more)
tests/: CMakeLists.txt  Camera.tests.cpp  Canvas.tests.cpp  Color.tests.cpp  Light.tests.cpp  Matrix.tests.cpp  Pattern.tests.cpp  Ray.tests.cpp  TestShape.cpp  TestShape.h  Tuple.tests.cpp  World.tests.cpp
