add_library(FMath
        FMath.h Fmath.cpp
        Tuple.h Tuple.cpp
        Color.h Color.cpp
        Canvas.h Canvas.cpp
        Matrix.h Matrix.cpp
        Ray.h Ray.cpp
        Sphere.h Sphere.cpp
        Intersection.h Intersection.cpp
        IntersectionResult.h IntersectionResult.cpp
        PointLight.h PointLight.cpp
        Material.h Material.cpp)