add_library(Common
        FMath.h Fmath.cpp
        Tuple.h Tuple.cpp
        Color.h Color.cpp
        Canvas.h Canvas.cpp
        Matrix.h Matrix.cpp
        Ray.h Ray.cpp
        Intersection.h Intersection.cpp
        IntersectionResult.h IntersectionResult.cpp
        PointLight.h PointLight.cpp
        Material.h Material.cpp
        World.h World.cpp
        IntersectionComputations.h IntersectionComputations.cpp
        Camera.h Camera.cpp
        Shape.h Shape.cpp
        Sphere.h Sphere.cpp Plane.cpp Plane.h StripePattern.cpp StripePattern.h Pattern.cpp Pattern.h GradientPattern.cpp GradientPattern.h RingPattern.cpp RingPattern.h CheckersPattern.cpp CheckersPattern.h)